--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
-      "description":"Other user can't use your bot in pm (type yes to active or no to deactive ; don't write in capital letter)",
-      "value":"no",
-      "required":false
+{
+	"name":"YESSER-MD"
+	"description":"Other user can't use your bot in pm (type yes to active or no to deactive ; don't write in capital letter)",
+	"value":"no",
+	"required":false
     }
     ,
     "BOT_NAME" : {
@@ -66,25 +68,28 @@
     "required": true,
     "value": "yes"
   },
-  "PRESENCE":{
+  "PRESENCE":
+{
     "description":"Mark your presence: 1 to indicate that you are online even if you are not. 2 to indicate that you are currently typing a message. 3 to indicate that you are currently recording an audio. Or leave the field blank to indicate your real state.",
     "value":"",
     "required": false
 	  
   },
-	    "AUTO_READ":{
+	    "AUTO_READ":
+{
     "description":"Enter yes for auto read messages.",
     "value":"",
     "required": false
     },
-  "ANTI_DELETE_MESSAGE" : {
+  "ANTI_DELETE_MESSAGE" : 
+{
     "description": "if you want to enable anti delete message put yes else put no",
     "value": "yes",
         "required": false
   }
   },
 
-    "buildpacks": [
+    "buildpacks":[
     {
       "url": "heroku/nodejs"
     },
